--- a/404.html
+++ b/404.html
@@ -9,13 +9,13 @@
 <meta name="keywords" content="">
 <meta name="description" content="#dataengineering #datainfra #datascience #bigdata">
 <meta name="author" content="Omar Valdez">
-<link rel="canonical" href="https://thedatafixer.github.io/blog/404.html">
-<link crossorigin="anonymous" href="/blog/assets/css/stylesheet.d9e2b1863dca7db1f2d69a80e60e6fb0b71200507f0227829c3870eaf5cdcb0b.css" integrity="sha256-2eKxhj3KfbHy1pqA5g5vsLcSAFB/AieCnDhw6vXNyws=" rel="preload stylesheet" as="style">
-<link rel="icon" href="https://thedatafixer.github.io/favicon/favicon.ico">
-<link rel="icon" type="image/png" sizes="16x16" href="https://thedatafixer.github.io/favicon/favicon-16x16.png">
-<link rel="icon" type="image/png" sizes="32x32" href="https://thedatafixer.github.io/favicon/favicon-32x32.png">
-<link rel="apple-touch-icon" href="https://thedatafixer.github.io/favicon/apple-touch-icon.png">
-<link rel="mask-icon" href="https://thedatafixer.github.io/favicon/favicon-16x16.png">
+<link rel="canonical" href="https://thedatafixer.xyz/404.html">
+<link crossorigin="anonymous" href="/assets/css/stylesheet.d9e2b1863dca7db1f2d69a80e60e6fb0b71200507f0227829c3870eaf5cdcb0b.css" integrity="sha256-2eKxhj3KfbHy1pqA5g5vsLcSAFB/AieCnDhw6vXNyws=" rel="preload stylesheet" as="style">
+<link rel="icon" href="https://thedatafixer.xyz/favicon/favicon.ico">
+<link rel="icon" type="image/png" sizes="16x16" href="https://thedatafixer.xyz/favicon/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="https://thedatafixer.xyz/favicon/favicon-32x32.png">
+<link rel="apple-touch-icon" href="https://thedatafixer.xyz/favicon/apple-touch-icon.png">
+<link rel="mask-icon" href="https://thedatafixer.xyz/favicon/favicon-16x16.png">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
 <noscript>
@@ -57,7 +57,7 @@
 </noscript><meta property="og:title" content="404 Page not found" />
 <meta property="og:description" content="#dataengineering #datainfra #datascience #bigdata" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://thedatafixer.github.io/blog/404.html" />
+<meta property="og:url" content="https://thedatafixer.xyz/404.html" />
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="404 Page not found"/>
@@ -80,7 +80,7 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="https://thedatafixer.github.io/blog/" accesskey="h" title="The Data Fixer (Alt + H)">The Data Fixer</a>
+            <a href="https://thedatafixer.xyz/" accesskey="h" title="The Data Fixer (Alt + H)">The Data Fixer</a>
             <div class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24"
@@ -106,17 +106,17 @@
         </div>
         <ul id="menu">
             <li>
-                <a href="https://thedatafixer.github.io/blog/archive/" title="Archive">
+                <a href="https://thedatafixer.xyz/archive/" title="Archive">
                     <span>Archive</span>
                 </a>
             </li>
             <li>
-                <a href="https://thedatafixer.github.io/blog/tags/" title="Tags">
+                <a href="https://thedatafixer.xyz/tags/" title="Tags">
                     <span>Tags</span>
                 </a>
             </li>
             <li>
-                <a href="https://thedatafixer.github.io/blog/search/" title="🔍">
+                <a href="https://thedatafixer.xyz/search/" title="🔍">
                     <span>🔍</span>
                 </a>
             </li>
@@ -128,7 +128,7 @@
     </main>
     
 <footer class="footer">
-    <span>&copy; 2023 <a href="https://thedatafixer.github.io/blog/">The Data Fixer</a></span>
+    <span>&copy; 2023 <a href="https://thedatafixer.xyz/">The Data Fixer</a></span>
     <span>
         Powered by
         <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a> &
