--- a/search/index.html
+++ b/search/index.html
@@ -9,14 +9,14 @@
 <meta name="keywords" content="">
 <meta name="description" content="Search - The Data Fixer">
 <meta name="author" content="Omar Valdez">
-<link rel="canonical" href="https://thedatafixer.github.io/blog/search/">
-<link crossorigin="anonymous" href="/blog/assets/css/stylesheet.d9e2b1863dca7db1f2d69a80e60e6fb0b71200507f0227829c3870eaf5cdcb0b.css" integrity="sha256-2eKxhj3KfbHy1pqA5g5vsLcSAFB/AieCnDhw6vXNyws=" rel="preload stylesheet" as="style"><link crossorigin="anonymous" rel="preload" as="fetch" href="../index.json">
-<script defer crossorigin="anonymous" src="/blog/assets/js/search.4c1d353f45e24374e162744a53f4e50e2428b0a72532da0536344b8a04715a4c.js" integrity="sha256-TB01P0XiQ3ThYnRKU/TlDiQosKclMtoFNjRLigRxWkw="></script>
-<link rel="icon" href="https://thedatafixer.github.io/favicon/favicon.ico">
-<link rel="icon" type="image/png" sizes="16x16" href="https://thedatafixer.github.io/favicon/favicon-16x16.png">
-<link rel="icon" type="image/png" sizes="32x32" href="https://thedatafixer.github.io/favicon/favicon-32x32.png">
-<link rel="apple-touch-icon" href="https://thedatafixer.github.io/favicon/apple-touch-icon.png">
-<link rel="mask-icon" href="https://thedatafixer.github.io/favicon/favicon-16x16.png">
+<link rel="canonical" href="https://thedatafixer.xyz/search/">
+<link crossorigin="anonymous" href="/assets/css/stylesheet.d9e2b1863dca7db1f2d69a80e60e6fb0b71200507f0227829c3870eaf5cdcb0b.css" integrity="sha256-2eKxhj3KfbHy1pqA5g5vsLcSAFB/AieCnDhw6vXNyws=" rel="preload stylesheet" as="style"><link crossorigin="anonymous" rel="preload" as="fetch" href="../index.json">
+<script defer crossorigin="anonymous" src="/assets/js/search.4c1d353f45e24374e162744a53f4e50e2428b0a72532da0536344b8a04715a4c.js" integrity="sha256-TB01P0XiQ3ThYnRKU/TlDiQosKclMtoFNjRLigRxWkw="></script>
+<link rel="icon" href="https://thedatafixer.xyz/favicon/favicon.ico">
+<link rel="icon" type="image/png" sizes="16x16" href="https://thedatafixer.xyz/favicon/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="https://thedatafixer.xyz/favicon/favicon-32x32.png">
+<link rel="apple-touch-icon" href="https://thedatafixer.xyz/favicon/apple-touch-icon.png">
+<link rel="mask-icon" href="https://thedatafixer.xyz/favicon/favicon-16x16.png">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
 <noscript>
@@ -58,7 +58,7 @@
 </noscript><meta property="og:title" content="Search" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="https://thedatafixer.github.io/blog/search/" /><meta property="article:section" content="" />
+<meta property="og:url" content="https://thedatafixer.xyz/search/" /><meta property="article:section" content="" />
 
 
 
@@ -76,7 +76,7 @@
       "@type": "ListItem",
       "position":  1 ,
       "name": "Search",
-      "item": "https://thedatafixer.github.io/blog/search/"
+      "item": "https://thedatafixer.xyz/search/"
     }
   ]
 }
@@ -102,14 +102,14 @@
   },
   "mainEntityOfPage": {
     "@type": "WebPage",
-    "@id": "https://thedatafixer.github.io/blog/search/"
+    "@id": "https://thedatafixer.xyz/search/"
   },
   "publisher": {
     "@type": "Organization",
     "name": "The Data Fixer",
     "logo": {
       "@type": "ImageObject",
-      "url": "https://thedatafixer.github.io/favicon/favicon.ico"
+      "url": "https://thedatafixer.xyz/favicon/favicon.ico"
     }
   }
 }
@@ -131,7 +131,7 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="https://thedatafixer.github.io/blog/" accesskey="h" title="The Data Fixer (Alt + H)">The Data Fixer</a>
+            <a href="https://thedatafixer.xyz/" accesskey="h" title="The Data Fixer (Alt + H)">The Data Fixer</a>
             <div class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24"
@@ -157,17 +157,17 @@
         </div>
         <ul id="menu">
             <li>
-                <a href="https://thedatafixer.github.io/blog/archive/" title="Archive">
+                <a href="https://thedatafixer.xyz/archive/" title="Archive">
                     <span>Archive</span>
                 </a>
             </li>
             <li>
-                <a href="https://thedatafixer.github.io/blog/tags/" title="Tags">
+                <a href="https://thedatafixer.xyz/tags/" title="Tags">
                     <span>Tags</span>
                 </a>
             </li>
             <li>
-                <a href="https://thedatafixer.github.io/blog/search/" title="🔍">
+                <a href="https://thedatafixer.xyz/search/" title="🔍">
                     <span class="active">🔍</span>
                 </a>
             </li>
@@ -194,7 +194,7 @@
     </main>
     
 <footer class="footer">
-    <span>&copy; 2023 <a href="https://thedatafixer.github.io/blog/">The Data Fixer</a></span>
+    <span>&copy; 2023 <a href="https://thedatafixer.xyz/">The Data Fixer</a></span>
     <span>
         Powered by
         <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a> &
