--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   "description": "#dataengineering #datainfra #datascience #bigdata",
   "thumbnailUrl": "https://thedatafixer.xyz/favicon/favicon.ico",
   "sameAs": [
-      "https://github.com/theDataFixer", "https://youtube.com/@theDataFixer", "https://mastodon.social/@theDataFixer", "https://t.me/theDataFixer", "https://discordapp.com/users/thedatafixer", "https://thedatafixer.xyz/index.xml", "mailto:info@thedatafixer.xyz"
+      "https://github.com/theDataFixer", "https://youtube.com/@theDataFixer", "https://mastodon.social/@theDataFixer", "https://www.linkedin.com/in/omarvaldez5/", "https://t.me/theDataFixer", "https://discordapp.com/users/thedatafixer", "https://thedatafixer.xyz/index.xml", "mailto:info@thedatafixer.xyz"
   ]
 }
 </script>
@@ -180,6 +180,14 @@
     <path
         d="M17.832 8.633v5h-1.978V8.78c0-1.023-.43-1.542-1.29-1.542-.95 0-1.427.616-1.427 1.834v2.655H11.17V9.072c0-1.218-.476-1.834-1.427-1.834-.86 0-1.29.52-1.29 1.542v4.852H6.475V8.633c0-1.022.26-1.834.782-2.434.538-.6 1.243-.909 2.118-.909 1.012 0 1.779.39 2.286 1.169l.492.827.493-.827c.507-.78 1.274-1.169 2.286-1.169.875 0 1.58.308 2.118.909.522.6.782 1.412.782 2.434"
         fill="currentColor" stroke="none" />
+</svg>
+    </a>
+    <a href="https://www.linkedin.com/in/omarvaldez5/" target="_blank" rel="noopener noreferrer me" title="Linkedin">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+    stroke-linecap="round" stroke-linejoin="round">
+    <path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path>
+    <rect x="2" y="9" width="4" height="12"></rect>
+    <circle cx="4" cy="4" r="2"></circle>
 </svg>
     </a>
     <a href="https://t.me/theDataFixer" target="_blank" rel="noopener noreferrer me" title="Telegram">
