--- a/index.html
+++ b/index.html
@@ -197,9 +197,9 @@
 </div>
 
         <div class="buttons">
-            <a class="button" href="aboutme" rel="noopener" title="About Me">
+            <a class="button" href="whoami" rel="noopener" title="¿Quién Soy?">
                 <span class="button-inner">
-                    About Me
+                    ¿Quién Soy?
                 </span>
             </a>
             <a class="button" href="search" rel="noopener" title="Search">
@@ -214,7 +214,7 @@
             </a>
         </div>
         <div style="font-size: small; font-style: italic; opacity: 80%; font-weight: lighter; margin: 10px;">
-            (Last updated: 21 September 2023)
+            (Last updated: 22 September 2023)
         </div>
     </div>
 </div>
