--- a/index.html
+++ b/index.html
@@ -124,13 +124,18 @@
         </div>
         <ul id="menu">
             <li>
-                <a href="https://thedatafixer.xyz/archive/" title="Archive">
-                    <span>Archive</span>
+                <a href="https://thedatafixer.xyz/archive/" title="Archivo">
+                    <span>Archivo</span>
                 </a>
             </li>
             <li>
-                <a href="https://thedatafixer.xyz/tags/" title="Tags">
-                    <span>Tags</span>
+                <a href="https://thedatafixer.xyz/tags/" title="Etiquetas">
+                    <span>Etiquetas</span>
+                </a>
+            </li>
+            <li>
+                <a href="https://thedatafixer.xyz/datafordummies/" title="Data For Dummies">
+                    <span>Data For Dummies</span>
                 </a>
             </li>
             <li>
@@ -202,19 +207,14 @@
                     ¿Quién Soy?
                 </span>
             </a>
-            <a class="button" href="search" rel="noopener" title="Search">
+            <a class="button" href="posts" rel="noopener" title="Artículos">
                 <span class="button-inner">
-                    Search
-                </span>
-            </a>
-            <a class="button" href="posts" rel="noopener" title="Posts">
-                <span class="button-inner">
-                    Posts
+                    Artículos
                 </span>
             </a>
         </div>
         <div style="font-size: small; font-style: italic; opacity: 80%; font-weight: lighter; margin: 10px;">
-            (Last updated: 10 October 2023)
+            (Last updated: 24 October 2023)
         </div>
     </div>
 </div>
