--- a/404.html
+++ b/404.html
@@ -113,8 +113,8 @@
                 </a>
             </li>
             <li>
-                <a href="https://thedatafixer.xyz/tags/" title="Etiquetas">
-                    <span>Etiquetas</span>
+                <a href="https://thedatafixer.xyz/hablemos/" title="Hablemos">
+                    <span>Hablemos</span>
                 </a>
             </li>
             <li>
