--- a/datafordummies/index.html
+++ b/datafordummies/index.html
@@ -168,8 +168,8 @@ Si crees que falta agregar algún concepto, o si deseas editar algún término, 
                 </a>
             </li>
             <li>
-                <a href="https://thedatafixer.xyz/tags/" title="Etiquetas">
-                    <span>Etiquetas</span>
+                <a href="https://thedatafixer.xyz/hablemos/" title="Hablemos">
+                    <span>Hablemos</span>
                 </a>
             </li>
             <li>
