--- a/hablemos/index.html
+++ b/hablemos/index.html
@@ -171,13 +171,13 @@ A qué te dedicas Tema a platicar Cierre Sí, es gratis."/>
         </div>
         <ul id="menu">
             <li>
-                <a href="https://thedatafixer.xyz/archive/" title="Archivo">
-                    <span>Archivo</span>
+                <a href="https://thedatafixer.xyz/hablemos/" title="Hablemos">
+                    <span class="active">Hablemos</span>
                 </a>
             </li>
             <li>
-                <a href="https://thedatafixer.xyz/hablemos/" title="Hablemos">
-                    <span class="active">Hablemos</span>
+                <a href="https://thedatafixer.xyz/usos/" title="Usos">
+                    <span>Usos</span>
                 </a>
             </li>
             <li>
